--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,10 @@
 <h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
+<p>Tel: +27827035895</p>
+<p>Email: selloitswene@gmail.com</p>
 <p>Address:</p>
 <p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
+  182 forest buzzard Street<br />
+  Danville<br />
+  Gauteng
+  0183 <br />
 </p>
