--- a/movie-ranking.html
+++ b/movie-ranking.html
@@ -1,9 +1,9 @@
-<h1>The Best Movies According to Angela</h1>
+<h1>The Best Movies According to Sello</h1>
 <h2>My top 3 movies of all-time.</h2>
 <hr />
-<h3>Spirited Away</h3>
-<p>This is my favourite anime. I love the beautiful images.</p>
-<h3>Ex Machina</h3>
-<p>Really cool sci-fi movie.</p>
-<h3>Drive</h3>
-<p>Super beautiful film. Really artistic.</p>
+<h3>Fast and furious 6</h3>
+<p>This is my favourite acion movie. I love Paul Walker and Vin diesel.</p>
+<h3>Titanic</h3>
+<p>A really touching love Story.</p>
+<h3>After</h3>
+<p>I can relate very well with the movie</p>
